--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.head{
+    text-align: center;
+    margin: 2rem;
+    font-size: 40px;
+}
 .container{
     display: grid;
     margin: auto;
@@ -15,8 +25,8 @@
 .number{
  background-color: blue;
  color: white;
- width: 1rem;
+ width: 2.5rem;
  text-align: center;
- padding: 10px;
+ padding: 1rem;
  border-radius: 10px;
 }
